<resources>
    <string name="app_name">Calculadora</string>
    <string name="n1">Primer Numero</string>
    <string name="n2">Segundo numero</string>
    <string name="suma">Suma</string>
    <string name="multipica">Multiplica</string>
    <string name="multiplicacion">Multiplica</string>
    <string name="resta">Resta</string>
    <string name="divide">Divide</string>
    <string name="total">0</string>
    <string name="totalV">Total</string>
    <string name="respuesta">Respuesta</string>
    <string name="vacio">Ingrese algun número</string>
</resources>